Feat: Chat-feature implemented(not yet sure if it work over the internet for now it works in local)